# conllchains

./: README.md  download.py  extract_chains.py  pyproject.toml  requirements.txt
src/: conllchains.py
